--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,19 +1,31 @@
 .footer {
     width: 100%;
-    height: 100%;
+    height: 100vh;
 
     .container {
         background-color: $background;
         height: auto;
         padding-inline: $wrapper-value-navbar;
+        padding-block: 3vh;
         position: relative;
         z-index: 2;
         align-items: flex-end;
+
+        @media (max-width: $layout-breakpoint-small) {
+            padding-inline: $wrapper-value;
+        }
+
         .top-footer-row {
-            margin-block: 35vh;
             width: 100%;
-            display: flex;
-            grid-template-rows: repeat(2, 1fr);
+            height: 90vh;
+            display: grid;
+            grid-template-columns: 50% 50%;
+
+            @media (max-width: $layout-breakpoint-small) {
+                grid-template-columns: 100%;
+                grid-row-gap: 6vh;
+                height: 65vh;
+            }
 
             .footer-socials {
                 display: table;
@@ -22,6 +34,14 @@
                 .footer-socials-list {
                     display: table-cell;
                     vertical-align: middle;
+
+                    .footer-socials-header {
+                        color: $text-color;
+                        font-size: 1.3rem;
+                        font-weight: 600;
+                        padding-bottom: 2rem;
+                    }
+
                     .footer-social-link {
                         display: flex;
                         align-items: center;
@@ -29,8 +49,12 @@
                         width: 50%;
                         font-size: 1.8rem;
                         padding-block: 1.4rem;
-                        box-shadow: inset 0 -1px 0 rgb(156, 156, 156);
+                        box-shadow: inset 0 -1px 0 rgb(0, 0, 0);
                         cursor: pointer !important;
+
+                        @media (max-width: $layout-breakpoint-xsmall) {
+                            width: 100%;
+                        }
 
                         a {
                             text-decoration: none;
@@ -41,7 +65,6 @@
 
                         .footer-social-link-arrow {
                             font-size: 1.9rem;
-
                         }
                     }
                 }
@@ -55,18 +78,33 @@
                     vertical-align: middle;
                     width: 100%;
 
+                    @media (max-width: $layout-breakpoint-small) {
+                        vertical-align: top;
+                    }
+
                     .interested-question {
                         font-weight: 600;
                         font-size: 1.8rem;
                         padding-bottom: 2rem;
                         color: $text-color;
+
+                        //Changes font size and padding bottom
+                        @media (max-width: $layout-breakpoint-xsmall) {
+                            font-size: 1.5rem;
+                            padding-bottom: .2rem;
+                        }
                     }
 
                     .email-header-link {
                         padding-block: 1rem;
+
+                        @media (max-width: $layout-breakpoint-xsmall) {
+                            padding-block: .2rem;
+                        }
+
                         a {
                             font-weight: 700;
-                            font-size: calc(clamp(3rem, 7vw, 8rem) * 0.875);
+                            font-size: calc(clamp(2rem, 5vw, 8rem) * 0.875);
                             color: $black;
                             cursor: pointer !important;
                         }
@@ -78,6 +116,10 @@
                         .email-link-icon {
                             padding-left: 10px;
                             font-size: 5rem;
+
+                            @media (max-width: $layout-breakpoint-xsmall) {
+                                font-size: 1.8rem;
+                            }
                         }
                     }
                 }
@@ -85,26 +127,50 @@
         }
 
         .bottom-footer-row {
-            height: 10vh;
-            font-size: 1.35rem;
+            width: 100%;
+            font-size: 1.4rem;
             font-weight: 600;
-            color: $black;
+            color: $text-color;
 
             .footer-bottom-container {
                 width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
+                display: grid;
+                grid-template-columns: 50% 50%;
+
+                @media (max-width: $layout-breakpoint-small) {
+                    grid-template-columns: 100%;
+                }
+
+                .footer-bottom-left {
+                    @media (max-width: $layout-breakpoint-xsmall) {
+                        padding-bottom: 10vh;
+                    }
+                }
+
+                .footer-bottom-right {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                }
 
                 .footer-copyright {
+                    font-size: 1.4rem;
+
+                    @media (max-width: $layout-breakpoint-xsmall) {
+                        display: none;
+                    }
                 }
 
                 .made-by {
                     a {
-                        font-size: 1.5rem;
+                        color: $text-color;
                         text-decoration: none;
-                        color: $black;
                         cursor: pointer !important;
+                        transition: 0.3s ease-in-out;
+
+                        &:hover {
+                            color: $black;
+                        }
                     }
                 }
             }
