--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -2,7 +2,8 @@ $year-date-color: rgba(255, 255, 255, 0.6);
 $card-spacing: 3vw;
 
 .photo-album-section {
-    margin-block: 30vh;
+    margin-top: 30vh;
+    margin-bottom: 15vh;
     .photo-albums-header {
         letter-spacing: -1px;
         font-size: 3.5rem;
@@ -44,8 +45,7 @@ $card-spacing: 3vw;
                             }
 
                             .album-cover {
-                                transform: scale(1.025);
-                                filter: brightness(.5);
+                                transform: scale(1.05);
                             }
                         }
 
@@ -153,7 +153,7 @@ $card-spacing: 3vw;
                             font-size: 0.7rem;
                             color: $black;
                             font-weight: 500;
-                            font-size: 2rem;
+                            font-size: calc(clamp(1.9rem, 7vw, 2.3rem) * 0.875);
                             text-decoration: none;
 
                             @media (max-width: $layout-breakpoint-xsmall) {
