--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -54,27 +54,12 @@ $desktop-menu-button-bar-height: 2px;
 
     .logo {
       pointer-events: all;
-      .placeholder-logo {
-        color: $white;
-        letter-spacing: 1px;
-        transition: 0.3s ease-in-out;
-        font-weight: 700;
-        text-transform: uppercase;
-        font-size: 2.3rem;
-        text-decoration: none;
+      cursor: pointer !important;
+
+      .svg-logo {
         cursor: pointer !important;
-
-        &a:hover,
-        a:visited,
-        a:link,
-        a:active {
-          text-decoration: none;
-        }
-
-        .svg-logo {
-          transform: scale(0.2);
-        }
       }
+
       @media (max-width: $layout-breakpoint-small) {
         visibility: hidden;
       }
