--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -56,6 +56,7 @@ main {
   // overflow: hidden;
 }
 
+//Cursor styling
 .cursor__dot div {
   z-index: 999999 !important;
 }
@@ -70,7 +71,9 @@ main {
 }
 
 
-::-moz-selection { /* Code for Firefox */
+//Selection color styling
+/* Code for Firefox */
+::-moz-selection { 
   color: $black;
   background: $white;
 }
