--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,4 +1,3 @@
-$footer-bottom-text-color: rgb(255, 255, 255);
 
 .footer {
     width: 100%;
@@ -18,6 +17,12 @@ $footer-bottom-text-color: rgb(255, 255, 255);
 
         @media (max-width: $layout-breakpoint-small) {
             padding-inline: $wrapper-value-breakpoint-small;
+            padding-block: 10vh;
+        }
+
+        @media (max-width: $layout-breakpoint-small) {
+            padding-top: 10vh;
+            padding-bottom: 15vh;
         }
 
         .top-footer-row {
@@ -28,7 +33,8 @@ $footer-bottom-text-color: rgb(255, 255, 255);
             grid-row-gap: 10vh;
 
             @media (max-width: $layout-breakpoint-small) {
-                height: 50vh;
+                height: 45vh;
+                grid-row-gap: 0 !important;
             }
 
             
@@ -43,20 +49,15 @@ $footer-bottom-text-color: rgb(255, 255, 255);
                     vertical-align: middle;
                     width: 100%;
 
-                    @media (max-width: $layout-breakpoint-small) {
-                        vertical-align: top;
-                    }
-
                     .interested-question {
                         font-weight: 100;
-                        font-size: 3rem;
+                        font-size: calc(clamp(2rem, 4vw, 4rem) * 0.875);
                         padding-bottom: 5rem;
                         color: $text-color;
 
                         //Changes font size and padding bottom
                         @media (max-width: $layout-breakpoint-xsmall) {
-                            font-size: 1.5rem;
-                            padding-bottom: 1rem;
+                            padding-bottom: 2rem;
                         }
                     }
 
@@ -96,14 +97,25 @@ $footer-bottom-text-color: rgb(255, 255, 255);
                 display: none;
 
                 @media (max-width: $layout-breakpoint-small) {
-                    display: block;
+                    display: table;
                 }
+
                 .footer-socials-responsive-list {
+                    display: table-cell;
+                    vertical-align: middle;
                     .footer-socials-responsive-container {
+                        @media (max-width: $layout-breakpoint-xsmall) {
+                            padding-block: .7rem;
+                        }
                         .footer-socials-responsive-link {
                             color: $white;
                             text-decoration: none;
                             font-size: 2rem;
+
+                            @media (max-width: $layout-breakpoint-xsmall) {
+                                margin-block: 2rem;
+                                font-size: 2rem;
+                            }
                         }
                     }
                 }
@@ -115,7 +127,11 @@ $footer-bottom-text-color: rgb(255, 255, 255);
             height: 10vh;
             font-size: 1.6rem;
             font-weight: 600;
-            color: $footer-bottom-text-color;
+            color: $white;
+
+            @media (max-width: $layout-breakpoint-small) {
+                font-size: 1.3rem;
+            }
 
             .footer-bottom-container {
                 width: 100%;
@@ -129,13 +145,22 @@ $footer-bottom-text-color: rgb(255, 255, 255);
                 .footer-bottom-left {
                     display: flex;
 
+                    @media (max-width: $layout-breakpoint-small) {
+                        display: block;
+                        color: $text-color;
+                    }  
+
                     .footer-copyright {
                         margin-right: 3vw;
+
+                        @media (max-width: $layout-breakpoint-small) {
+                            display: none;
+                        }  
                     }
 
                     .made-by {
                         a {
-                            color: $footer-bottom-text-color;
+                            color: $white;
                             text-decoration: none;
                             cursor: pointer !important;
                             transition: 0.3s ease-in-out;
@@ -143,6 +168,10 @@ $footer-bottom-text-color: rgb(255, 255, 255);
                             &:hover {
                                 color: $white;
                             }
+                        }
+
+                        @media (max-width: $layout-breakpoint-small) {
+                            margin-top: 5vh;
                         }
                     }
                 }
@@ -158,7 +187,7 @@ $footer-bottom-text-color: rgb(255, 255, 255);
                     }
 
                     .footer-bottom-socials-links {
-                        color: $footer-bottom-text-color;
+                        color: $white;
                         text-decoration: none;
                         padding-right: 0.5vw;
                         transition: 0.3s ease-in-out;
@@ -178,14 +207,4 @@ $footer-bottom-text-color: rgb(255, 255, 255);
             }
         }
     }
-}
-
-.footer-socials-header,
-.footer-email-header {
-    color: $text-color;
-    font-size: 1.2rem;
-    font-weight: 100;
-    padding-bottom: 2rem;
-    letter-spacing: 2px;
-    text-transform: uppercase;
 }
