--- a/src/scss/components/_home-about-normal.scss
+++ b/src/scss/components/_home-about-normal.scss
@@ -15,19 +15,29 @@ $layout-breakpoint-home-about: 1150px;
 
         .home-about-inner {
             display: grid;
-            grid-template-columns: 60% 50%;
-            grid-column-gap: 2vw;
+            grid-template-columns: 45% 55%;
             width: 100%;
 
             @media (max-width: $layout-breakpoint-small) {
                 grid-template-columns: repeat(1, 1fr);
             }
 
+            .home-about-portrait {
+                .potrait-container {
+                    overflow: hidden;
+                    .home-about-portrait {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+
             .home-about-content {
                 display: table;
                 width: 100%;
                 position: relative;
-                width: 100%;
+                margin-inline: 15%;
 
                 .home-about-content-inner {
                     width: 100%;
@@ -42,11 +52,11 @@ $layout-breakpoint-home-about: 1150px;
                         .home-about-content-line {
                             color: $black;
                             font-weight: 700;
-                            font-size: 5em;
+                            font-size: calc(clamp(3rem, 7vw, 8.5rem) * 0.875);
                             margin: 0;
-                            line-height: 1.5;
+                            line-height: 1.4;
                             overflow: hidden;
-                            letter-spacing: 1px;
+                            letter-spacing: 3px;
 
                             @media (max-width: $layout-breakpoint-medium) {
                                 font-size: 2.8rem;
@@ -64,12 +74,13 @@ $layout-breakpoint-home-about: 1150px;
                     .paragraphs {
                         padding-block: 2.5em;
                         .hero-content-paragraph {
-                            max-width: 50ch;
-                            padding-block: .6em;
-                            font-size: 1.6rem;
+                            max-width: 35ch;
+                            padding-block: 0.6em;
+                            font-size: 2rem;
                             line-height: 30px;
                             font-weight: 300;
-                            padding-right: 48px;
+                            color: $text-color;
+                            word-spacing: -1px;
 
                             @media (max-width: $layout-breakpoint-medium) {
                                 font-size: 1.3rem;
@@ -108,59 +119,6 @@ $layout-breakpoint-home-about: 1150px;
                                     text-decoration: none;
                                 }
                             }
-                        }
-                    }
-                }
-            }
-            .home-about-images {
-                .home-about-images-container {
-                    display: grid;
-                    grid-template-columns: repeat(2, 1fr);
-                    grid-column-gap: 0.1vw;
-                    width: 100%;
-                    position: relative;
-                    .image-container {
-                        width: 90%;
-                        height: 100%;
-                        overflow: hidden;
-
-                        @media (max-width: $layout-breakpoint-medium) {
-                            position: absolute;
-                        }
-
-                        &.left {
-                            @media (max-width: $layout-breakpoint-medium) {
-                                position: relative;
-                                top: -10%;
-                                left: 10%;
-                                width: 100%;
-                            }
-
-                            @media (max-width: $layout-breakpoint-home-about) {
-                                position: relative;
-                                width: 170%;
-                                margin-inline: 20%;
-                                left: 0;
-                                right: 0;
-                                top: 0;
-                            }
-                        }
-
-                        &.right {
-                            @media (max-width: $layout-breakpoint-medium) {
-                                position: relative;
-                                top: 30%;
-                                right: 10%;
-                                width: 100%;
-                            }
-
-                            @media (max-width: $layout-breakpoint-home-about) {
-                                display: none;
-                            }
-                        }
-
-                        .image {
-                            width: 100%;
                         }
                     }
                 }
