home about redesigned and finished, both desktop and responsive

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -111,9 +111,9 @@
                             color: $white;
                             text-decoration: none;
                             font-size: 2rem;
+                            cursor: pointer !important;
 
                             @media (max-width: $layout-breakpoint-xsmall) {
-                                margin-block: 2rem;
                                 font-size: 2rem;
                             }
                         }
