--- a/src/scss/components/_home-about-normal.scss
+++ b/src/scss/components/_home-about-normal.scss
@@ -10,16 +10,15 @@ $layout-breakpoint-home-about: 1150px;
         display: none;
     }
 
-    .container {
-        margin: 0 auto;
-
+    .home-about-normal-container {
         .home-about-inner {
             display: grid;
             grid-template-columns: 45% 55%;
             width: 100%;
 
-            @media (max-width: $layout-breakpoint-small) {
-                grid-template-columns: repeat(1, 1fr);
+            @media (max-width: $layout-breakpoint-medium) {
+                grid-template-columns: 55% 45%;
+
             }
 
             .home-about-portrait {
@@ -52,19 +51,19 @@ $layout-breakpoint-home-about: 1150px;
                         .home-about-content-line {
                             color: $black;
                             font-weight: 700;
-                            font-size: calc(clamp(3rem, 7vw, 8.5rem) * 0.875);
+                            font-size: calc(clamp(3rem, 4vw, 8.5rem) * 0.875);
                             margin: 0;
                             line-height: 1.4;
                             overflow: hidden;
                             letter-spacing: 0px;
 
-                            @media (max-width: $layout-breakpoint-medium) {
-                                font-size: 2.8rem;
-                            }
+                            // @media (max-width: $layout-breakpoint-medium) {
+                            //     font-size: 2.8rem;
+                            // }
 
-                            @media (max-width: $layout-breakpoint-home-about) {
-                                font-size: 2.5rem;
-                            }
+                            // @media (max-width: $layout-breakpoint-home-about) {
+                            //     font-size: 2.5rem;
+                            // }
 
                             .home-about-content-line-inner {
                             }
@@ -72,18 +71,23 @@ $layout-breakpoint-home-about: 1150px;
                     }
 
                     .paragraphs {
-                        padding-block: 7em;
+                        padding-block: 5em;
+
+                        @media (max-width: $layout-breakpoint-medium) {
+                            padding-block: 2em;
+                        }
+
                         .hero-content-paragraph {
                             max-width: 50ch;
                             padding-block: 0.6em;
-                            font-size: 2rem;
-                            line-height: 30px;
+                            line-height: 1.8;
                             font-weight: 300;
                             color: $text-color;
                             word-spacing: -1px;
+                            font-size: calc(clamp(1rem, 8vw, 2rem) * 0.875);
 
                             @media (max-width: $layout-breakpoint-medium) {
-                                font-size: 1.3rem;
+                                font-size: 1.6rem;
                             }
 
                             @media (max-width: $layout-breakpoint-home-about) {
@@ -97,15 +101,16 @@ $layout-breakpoint-home-about: 1150px;
                         display: flex;
 
                         .home-about-divider {
-                            margin-block: auto;
-                            font-size: 1.4rem;
+                            color: $black;
+                            font-size: 1.5rem;
                             padding-inline: 2rem;
+                            font-weight: 600;
                         }
 
                         .home-about-button {
                             .page-link {
                                 text-decoration: none;
-                                .read-about-link {
+                                .home-about-link {
                                     position: relative;
                                     background-color: transparent;
                                     transition: 0.5s ease-in-out;
@@ -120,6 +125,10 @@ $layout-breakpoint-home-about: 1150px;
 
                                     padding-bottom: 10px;
                                     border-bottom: 1px solid $black;
+
+                                    @media (max-width: $layout-breakpoint-medium) {
+                                        font-size: 1.4rem;
+                                    }
                                 }
                             }
                         }
