--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -22,7 +22,7 @@
 
         @media (max-width: $layout-breakpoint-small) {
             padding-top: 10vh;
-            padding-bottom: 15vh;
+            // padding-bottom: 15vh;
         }
 
         .top-footer-row {
@@ -148,6 +148,7 @@
                     @media (max-width: $layout-breakpoint-small) {
                         display: block;
                         color: $text-color;
+                        margin-top: 3vh;
                     }  
 
                     .footer-copyright {
@@ -158,7 +159,18 @@
                         }  
                     }
 
+                    .footer-copyright-version-two {
+                        color: $white;
+                        font-size: 1.5rem;
+
+                        @media (min-width: $layout-breakpoint-small) {
+                            display: none;
+                        }  
+
+                    }
+
                     .made-by {
+                        color: $white;
                         a {
                             color: $white;
                             text-decoration: none;
